# mx-graphics

./: README.md  splitdesignsco.gpl
admin/: clean-svg-metadata.sh  template-cc-full.rdf  template-min.rdf  work-template.rdf
design-aides/: stripe-generator.sh
design-aides/svg-generators/: Makefile.am  README.md  blob-generator.c  configure.ac  star-generator.c  stripe-front.conf  stripe-generator.c  stripe-rear-fender.conf  stripe-side.conf  util.c  util.h
design-aides/svg-generators/lib/: Makefile.am  Makefile.in  geometry.c  geometry.h  svg-utils.h
design-aides/svg-generators/svg-utils/: Makefile.am  config-file.c  log.c  svg-utils.h  util.c  util.h
templates/: README.md
templates/rm250/: README.md
templates/yz125/: README.md
